bindings/c/whiteout_m2.h

typedef struct whiteout_M2ParticleEmitter whiteout_M2ParticleEmitter;
typedef struct whiteout_M2Event whiteout_M2Event;
typedef struct whiteout_M2PhysicsFrame whiteout_M2PhysicsFrame;
typedef struct whiteout_M2PhysicsBody whiteout_M2PhysicsBody;
typedef struct whiteout_M2PhysicsShape whiteout_M2PhysicsShape;
typedef struct whiteout_M2BoxShape whiteout_M2BoxShape;
typedef struct whiteout_M2CapsuleShape whiteout_M2CapsuleShape;
typedef struct whiteout_M2SphereShape whiteout_M2SphereShape;
typedef struct whiteout_M2PolytopeHalfEdge whiteout_M2PolytopeHalfEdge;
void whiteout_m2_M2ParticleEmitter_set_followScale2(whiteout_M2ParticleEmitter* self, float value);
size_t whiteout_m2_M2ParticleEmitter_get_splinePoints_count(const whiteout_M2ParticleEmitter* self);
const float* whiteout_m2_M2ParticleEmitter_get_splinePoints_data(const whiteout_M2ParticleEmitter* self);
/* ── M2Event ─────────────────────────────────────────────── */

whiteout_M2Event* whiteout_m2_M2Event_new(void);
void whiteout_m2_M2Event_delete(whiteout_M2Event* self);
uint32_t whiteout_m2_M2Event_get_identifier(const whiteout_M2Event* self);
void whiteout_m2_M2Event_set_identifier(whiteout_M2Event* self, uint32_t value);
uint32_t whiteout_m2_M2Event_get_data(const whiteout_M2Event* self);
void whiteout_m2_M2Event_set_data(whiteout_M2Event* self, uint32_t value);
uint32_t whiteout_m2_M2Event_get_boneId(const whiteout_M2Event* self);
void whiteout_m2_M2Event_set_boneId(whiteout_M2Event* self, uint32_t value);
whiteout_Vector3f* whiteout_m2_M2Event_get_position(whiteout_M2Event* self);
void whiteout_m2_M2Event_set_position(whiteout_M2Event* self, const whiteout_Vector3f* value);
/* ── M2PhysicsFrame ─────────────────────────────────────────────── */

/* The affine frame the Domino chunks store: three basis columns and an origin, twelve floats in all. */
/*  */
/* The client reassembles it as `dmMtx{axisX, axisY, axisZ}` -> `dmQuatFromMtx` plus `origin` as the translation, giving a `dmTransform`. */
whiteout_M2PhysicsFrame* whiteout_m2_M2PhysicsFrame_new(void);
void whiteout_m2_M2PhysicsFrame_delete(whiteout_M2PhysicsFrame* self);
whiteout_Vector3f* whiteout_m2_M2PhysicsFrame_get_axisX(whiteout_M2PhysicsFrame* self);
void whiteout_m2_M2PhysicsFrame_set_axisX(whiteout_M2PhysicsFrame* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2PhysicsFrame_get_axisY(whiteout_M2PhysicsFrame* self);
void whiteout_m2_M2PhysicsFrame_set_axisY(whiteout_M2PhysicsFrame* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2PhysicsFrame_get_axisZ(whiteout_M2PhysicsFrame* self);
void whiteout_m2_M2PhysicsFrame_set_axisZ(whiteout_M2PhysicsFrame* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2PhysicsFrame_get_origin(whiteout_M2PhysicsFrame* self);
void whiteout_m2_M2PhysicsFrame_set_origin(whiteout_M2PhysicsFrame* self, const whiteout_Vector3f* value);
/* ── M2PhysicsBody ─────────────────────────────────────────────── */

/* One rigid body, bound to a single model bone — BODY/BDY2/BDY3/BDY4. */
/*  */
/* The four on-disk layouts are the same fields accreting over time, so they share one struct; PhysicsData::version decides which of them is written back, and fields the older layouts lack keep their defaults. */
whiteout_M2PhysicsBody* whiteout_m2_M2PhysicsBody_new(void);
void whiteout_m2_M2PhysicsBody_delete(whiteout_M2PhysicsBody* self);
int32_t whiteout_m2_M2PhysicsBody_get_type(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_type(whiteout_M2PhysicsBody* self, int32_t value);
uint16_t whiteout_m2_M2PhysicsBody_get_boneIndex(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_boneIndex(whiteout_M2PhysicsBody* self, uint16_t value);
/* Offset from the bone's animated position, not an absolute position: the client spawns the body at `bonePosition + position`. */
whiteout_Vector3f* whiteout_m2_M2PhysicsBody_get_position(whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_position(whiteout_M2PhysicsBody* self, const whiteout_Vector3f* value);
/* First entry in PhysicsData::shapes belonging to this body. 32 bits wide in BODY/BDY2, 16 from BDY3 on — writing a larger index back into one of those truncates it. */
int32_t whiteout_m2_M2PhysicsBody_get_shapeIndex(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_shapeIndex(whiteout_M2PhysicsBody* self, int32_t value);
int32_t whiteout_m2_M2PhysicsBody_get_shapeCount(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_shapeCount(whiteout_M2PhysicsBody* self, int32_t value);
/* BDY3+. 1.0 on all but 45 of 1213 kinematic bodies but tuned freely on dynamic ones, negatives included — the shape of `dmBodyDef::m_gravityScale`. */
float whiteout_m2_M2PhysicsBody_get_gravityScale(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_gravityScale(whiteout_M2PhysicsBody* self, float value);
/* BDY2+. 1.0 in 3457 of 3526 bodies, otherwise 1.1-10 — `dmBodyDef::m_inertiaScale`. */
float whiteout_m2_M2PhysicsBody_get_inertiaScale(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_inertiaScale(whiteout_M2PhysicsBody* self, float value);
/* BDY3+. Zero on 1196 of 1213 kinematic bodies and 0-10 on dynamic ones — `dmBodyDef::m_linearDamping`. */
float whiteout_m2_M2PhysicsBody_get_linearDamping(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_linearDamping(whiteout_M2PhysicsBody* self, float value);
/* BDY3+. Same kinematic/dynamic split as @ref linearDamping — `dmBodyDef::m_angularDamping`. */
float whiteout_m2_M2PhysicsBody_get_angularDamping(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_angularDamping(whiteout_M2PhysicsBody* self, float value);
/* BDY3+. Unidentified. Unlike the four above it is set on kinematic and dynamic bodies alike, so it is not a rigid-body integration parameter; values cluster on 0.5, 0.01, 0.9 and 0.1. */
float whiteout_m2_M2PhysicsBody_get_unknown28(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_unknown28(whiteout_M2PhysicsBody* self, float value);
/* BDY4+. Unidentified; 0 in half the corpus, otherwise small values or 0x8000 alone, which reads like a bit field. */
uint16_t whiteout_m2_M2PhysicsBody_get_unknown2c(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_unknown2c(whiteout_M2PhysicsBody* self, uint16_t value);
/* BDY4+. Zero in every corpus body. */
uint16_t whiteout_m2_M2PhysicsBody_get_padding2e(const whiteout_M2PhysicsBody* self);
void whiteout_m2_M2PhysicsBody_set_padding2e(whiteout_M2PhysicsBody* self, uint16_t value);
/* ── M2PhysicsShape ─────────────────────────────────────────────── */

/* One collision shape reference — SHAP/SHP2. Points at an entry of the box/capsule/sphere/polytope array named by @ref shapeType. */
whiteout_M2PhysicsShape* whiteout_m2_M2PhysicsShape_new(void);
void whiteout_m2_M2PhysicsShape_delete(whiteout_M2PhysicsShape* self);
int32_t whiteout_m2_M2PhysicsShape_get_shapeType(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_shapeType(whiteout_M2PhysicsShape* self, int32_t value);
int16_t whiteout_m2_M2PhysicsShape_get_shapeIndex(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_shapeIndex(whiteout_M2PhysicsShape* self, int16_t value);
/* Zero in every corpus shape. */
uint32_t whiteout_m2_M2PhysicsShape_get_padding04(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_padding04(whiteout_M2PhysicsShape* self, uint32_t value);
float whiteout_m2_M2PhysicsShape_get_friction(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_friction(whiteout_M2PhysicsShape* self, float value);
float whiteout_m2_M2PhysicsShape_get_restitution(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_restitution(whiteout_M2PhysicsShape* self, float value);
float whiteout_m2_M2PhysicsShape_get_density(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_density(whiteout_M2PhysicsShape* self, float value);
/* SHP2+. Unidentified, but a float: only 0, 0.01, 0.8 and 1.0 occur. The one `dmFixtureDef` float the rest of this struct does not account for is `m_rollingResistance`. */
float whiteout_m2_M2PhysicsShape_get_unknown14(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_unknown14(whiteout_M2PhysicsShape* self, float value);
/* SHP2+. 1.0 in 3229 of 3230 shapes, matching the `m_scaleOrRadius` the client hands every fixture. */
float whiteout_m2_M2PhysicsShape_get_scale(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_scale(whiteout_M2PhysicsShape* self, float value);
/* SHP2+. Zero in every corpus shape. */
uint16_t whiteout_m2_M2PhysicsShape_get_unknown1c(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_unknown1c(whiteout_M2PhysicsShape* self, uint16_t value);
/* SHP2+. Uninitialised on disk; kept so writes match. */
uint16_t whiteout_m2_M2PhysicsShape_get_padding1e(const whiteout_M2PhysicsShape* self);
void whiteout_m2_M2PhysicsShape_set_padding1e(whiteout_M2PhysicsShape* self, uint16_t value);
/* ── M2BoxShape ─────────────────────────────────────────────── */

/* BOXS — an oriented box. The client turns it straight into a polytope via `CPhysicsBoxShapeDef::SetPolytopeData(frame, halfExtents)`. */
whiteout_M2BoxShape* whiteout_m2_M2BoxShape_new(void);
void whiteout_m2_M2BoxShape_delete(whiteout_M2BoxShape* self);
whiteout_Vector3f* whiteout_m2_M2BoxShape_get_halfExtents(whiteout_M2BoxShape* self);
void whiteout_m2_M2BoxShape_set_halfExtents(whiteout_M2BoxShape* self, const whiteout_Vector3f* value);
/* ── M2CapsuleShape ─────────────────────────────────────────────── */

/* CAPS — a capsule between two local points. */
whiteout_M2CapsuleShape* whiteout_m2_M2CapsuleShape_new(void);
void whiteout_m2_M2CapsuleShape_delete(whiteout_M2CapsuleShape* self);
whiteout_Vector3f* whiteout_m2_M2CapsuleShape_get_localPosition1(whiteout_M2CapsuleShape* self);
void whiteout_m2_M2CapsuleShape_set_localPosition1(whiteout_M2CapsuleShape* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2CapsuleShape_get_localPosition2(whiteout_M2CapsuleShape* self);
void whiteout_m2_M2CapsuleShape_set_localPosition2(whiteout_M2CapsuleShape* self, const whiteout_Vector3f* value);
float whiteout_m2_M2CapsuleShape_get_radius(const whiteout_M2CapsuleShape* self);
void whiteout_m2_M2CapsuleShape_set_radius(whiteout_M2CapsuleShape* self, float value);
/* ── M2SphereShape ─────────────────────────────────────────────── */

/* SPHS — a sphere at a local point. */
whiteout_M2SphereShape* whiteout_m2_M2SphereShape_new(void);
void whiteout_m2_M2SphereShape_delete(whiteout_M2SphereShape* self);
whiteout_Vector3f* whiteout_m2_M2SphereShape_get_localPosition(whiteout_M2SphereShape* self);
void whiteout_m2_M2SphereShape_set_localPosition(whiteout_M2SphereShape* self, const whiteout_Vector3f* value);
float whiteout_m2_M2SphereShape_get_radius(const whiteout_M2SphereShape* self);
void whiteout_m2_M2SphereShape_set_radius(whiteout_M2SphereShape* self, float value);
/* ── M2PolytopeHalfEdge ─────────────────────────────────────────────── */

/* One half-edge of a polytope — Domino's `dmSubEdge`, four bytes. */
/*  */
/* Half-edges are stored in twin pairs at adjacent indices, and the ones bounding a face form a cycle through @ref nextEdge. */
whiteout_M2PolytopeHalfEdge* whiteout_m2_M2PolytopeHalfEdge_new(void);