bindings/csharp/Whiteout/M2/NativeMethods.M2.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_followScale2(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2ParticleEmitter_get_splinePoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleEmitter_get_splinePoints_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Event_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Event_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2Event_get_identifier(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Event_set_identifier(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2Event_get_data(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Event_set_data(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2Event_get_boneId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Event_set_boneId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Event_get_position(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Event_set_position(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsFrame_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsFrame_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsFrame_get_axisX(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsFrame_set_axisX(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsFrame_get_axisY(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsFrame_set_axisY(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsFrame_get_axisZ(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsFrame_set_axisZ(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsFrame_get_origin(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsFrame_set_origin(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsBody_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2PhysicsBody_get_type(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_type(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2PhysicsBody_get_boneIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_boneIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsBody_get_position(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_position(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2PhysicsBody_get_shapeIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_shapeIndex(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2PhysicsBody_get_shapeCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_shapeCount(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsBody_get_gravityScale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_gravityScale(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsBody_get_inertiaScale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_inertiaScale(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsBody_get_linearDamping(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_linearDamping(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsBody_get_angularDamping(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_angularDamping(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsBody_get_unknown28(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_unknown28(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2PhysicsBody_get_unknown2c(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_unknown2c(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2PhysicsBody_get_padding2e(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsBody_set_padding2e(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsShape_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2PhysicsShape_get_shapeType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_shapeType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial short whiteout_m2_M2PhysicsShape_get_shapeIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_shapeIndex(IntPtr self, short value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PhysicsShape_get_padding04(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_padding04(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsShape_get_friction(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_friction(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsShape_get_restitution(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_restitution(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsShape_get_density(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_density(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsShape_get_unknown14(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_unknown14(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PhysicsShape_get_scale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_scale(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2PhysicsShape_get_unknown1c(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_unknown1c(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2PhysicsShape_get_padding1e(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsShape_set_padding1e(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2BoxShape_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2BoxShape_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2BoxShape_get_halfExtents(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2BoxShape_set_halfExtents(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2CapsuleShape_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2CapsuleShape_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2CapsuleShape_get_localPosition1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2CapsuleShape_set_localPosition1(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2CapsuleShape_get_localPosition2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2CapsuleShape_set_localPosition2(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2CapsuleShape_get_radius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2CapsuleShape_set_radius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SphereShape_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SphereShape_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SphereShape_get_localPosition(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SphereShape_set_localPosition(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2SphereShape_get_radius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SphereShape_set_radius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PolytopeHalfEdge_new();
